--- a/src/sass/_webdesign.scss
+++ b/src/sass/_webdesign.scss
@@ -35,3 +35,16 @@
         }
     }
 }
+.section__tech{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap:30px;
+    margin: 0 auto 192px;
+    width:1110px;
+    height: 988px;
+    .tech__div{
+        width:350px;
+        height:625px;
+    }
+}
