--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,11 +25,16 @@ body header img {
   -ms-flex-item-align: center;
       align-self: center;
 }
-body header nav li {
+body header nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 42px;
+}
+body header nav ul li {
   display: inline-block;
 }
-body header nav li a {
-  padding-right: 42px;
+body header nav ul li a {
   text-decoration: none;
   color: rgb(29, 28, 30);
   font-style: normal;
@@ -360,4 +365,23 @@ body footer .lower__container .inline__lower__container .section__media ul li i 
   font-size: 16px;
   line-height: 26px;
   text-align: center;
+}
+
+.section__tech {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 30px;
+  margin: 0 auto 192px;
+  width: 1110px;
+  height: 988px;
+}
+.section__tech .tech__div {
+  width: 350px;
+  height: 625px;
 }/*# sourceMappingURL=style.css.map */
