--- a/src/sass/_partial.scss
+++ b/src/sass/_partial.scss
@@ -2,6 +2,7 @@ $black: rgba(29, 28, 30, 1);
 $white: rgba(255, 255, 255, 1);
 $pink: rgba(231, 129, 107, 1);
 $grey: rgba(51, 49, 54, 1);
+$beige: #FDF3F0;
 
 $fontJ: "Jost", sans-serif;
 
