--- a/src/sass/_webdesign.scss
+++ b/src/sass/_webdesign.scss
@@ -44,6 +44,28 @@
     height: 988px;
     .tech__div{
         width:350px;
-        height:625px;
+        height:478px;
+        text-align: center;
+        background-color: $beige;
+        border-radius: 15px;
+        h2{
+            margin-top: 30px;
+            margin-bottom: 16px;
+            color:$pink;
+            font-family: 'Jost';
+            font-style: normal;
+            font-weight: 500;
+            font-size: 20px;
+            line-height: 26px;
+        }
+        p{
+            margin: 0 auto;
+            width:286px ;
+            font-family: 'Jost';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 26px;
+        }
     }
 }
