--- a/src/sass/_webdesign.scss
+++ b/src/sass/_webdesign.scss
@@ -1,37 +1,36 @@
-
-.section__solutions{
-    color:$white;
-    width: 1111px;
-    height:  252px;
-    background-image: url("../img/Oval.png");
-    background-repeat: no-repeat;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 160px;
-    display: flex;
-    align-items: center;
-    div{
-        margin-left: 190px;
-        margin-right: 191px;
-        h2{
-            height: 48px;
-            font-family: 'Jost';
-            font-style: normal;
-            font-weight: 500;
-            font-size: 48px;
-            line-height: 48px;
-            margin-bottom: 24px;
-            text-align: center;
-        }
-        p{
-            height:52px;
-            width: 730px;
-            font-family: 'Jost';
-            font-style: normal;
-            font-weight: 400;
-            font-size: 16px;
-            line-height: 26px;
-            text-align: center;
-        }
+.section__solutions__design {
+  color: $white;
+  width: 1111px;
+  height: 252px;
+  background-image: url("../img/Oval.png");
+  background-repeat: no-repeat;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 160px;
+  display: flex;
+  align-items: center;
+  div {
+    margin-left: 190px;
+    margin-right: 191px;
+    h2 {
+      height: 48px;
+      font-family: "Jost";
+      font-style: normal;
+      font-weight: 500;
+      font-size: 48px;
+      line-height: 48px;
+      margin-bottom: 24px;
+      text-align: center;
     }
+    p {
+      height: 52px;
+      width: 730px;
+      font-family: "Jost";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 26px;
+      text-align: center;
+    }
+  }
 }
