--- a/src/css/style.css
+++ b/src/css/style.css
@@ -426,7 +426,7 @@ footer .lower__container .inline__lower__container .section__media ul li i {
 }
 .section__solutions__design div h2 {
   height: 48px;
-  font-family: "Jost";
+  font-family: "Jost", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 48px;
@@ -437,7 +437,7 @@ footer .lower__container .inline__lower__container .section__media ul li i {
 .section__solutions__design div p {
   height: 52px;
   width: 730px;
-  font-family: "Jost";
+  font-family: "Jost", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -467,7 +467,7 @@ footer .lower__container .inline__lower__container .section__media ul li i {
   margin-top: 30px;
   margin-bottom: 16px;
   color: rgb(231, 129, 107);
-  font-family: "Jost";
+  font-family: "Jost", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
@@ -476,7 +476,7 @@ footer .lower__container .inline__lower__container .section__media ul li i {
 .section__tech .tech__div p {
   margin: 0 auto;
   width: 286px;
-  font-family: "Jost";
+  font-family: "Jost", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
