--- a/src/sass/_webdesign.scss
+++ b/src/sass/_webdesign.scss
@@ -14,7 +14,7 @@
     margin-right: 191px;
     h2 {
       height: 48px;
-      font-family: "Jost";
+      font-family: $fontJ;
       font-style: normal;
       font-weight: 500;
       font-size: 48px;
@@ -25,7 +25,7 @@
     p {
       height: 52px;
       width: 730px;
-      font-family: "Jost";
+      font-family: $fontJ;
       font-style: normal;
       font-weight: 400;
       font-size: 16px;
@@ -51,7 +51,7 @@
             margin-top: 30px;
             margin-bottom: 16px;
             color:$pink;
-            font-family: 'Jost';
+            font-family: $fontJ;
             font-style: normal;
             font-weight: 500;
             font-size: 20px;
@@ -60,7 +60,7 @@
         p{
             margin: 0 auto;
             width:286px ;
-            font-family: 'Jost';
+            font-family: $fontJ;
             font-style: normal;
             font-weight: 400;
             font-size: 16px;
