add style about

--- a/src/sass/_partial.scss
+++ b/src/sass/_partial.scss
@@ -2,6 +2,8 @@ $black: rgba(29, 28, 30, 1);
 $white: rgba(255, 255, 255, 1);
 $pink: rgba(231, 129, 107, 1);
 $grey: rgba(51, 49, 54, 1);
+$blackL: rgba(51, 49, 54, 1);
+$pinkBg: rgba(253, 243, 240, 1);
 
 $fontJ: "Jost", sans-serif;
 
