--- a/src/sass/_aboutus.scss
+++ b/src/sass/_aboutus.scss
@@ -1,50 +1,110 @@
-body{
-    width: 1440px;
-        .section__aboutUs{
-        display: flex;
-        margin: auto;
-        div{
-            height: 480px;
-            background-color: red;
-            color: white;
-            border-top-left-radius: 20px;
-            border-bottom-left-radius: 20px;
-        }
+body {
+  width: 1440px;
+  .section__aboutUs {
+    display: flex;
+    margin: auto;
+    div {
+      height: 480px;
+      background-color: red;
+      color: white;
+      border-top-left-radius: 20px;
+      border-bottom-left-radius: 20px;
     }
-    .section__skills{
-        display: flex;
-        margin-top: 20px;
-        div{
-            height: 480px;
-            background-color: red;
-            color: white;
-            border-top-right-radius: 20px;
-            border-bottom-right-radius: 20px;
-            .section__skills__img{
-                height: 480px;
-            }
-        }
+  }
+  .section__skills {
+    display: flex;
+    margin-top: 20px;
+    div {
+      height: 480px;
+      background-color: red;
+      color: white;
+      border-top-right-radius: 20px;
+      border-bottom-right-radius: 20px;
+      .section__skills__img {
+        height: 480px;
+      }
     }
-    .section__location{
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        margin-top: 20px;
-        margin-bottom: 20px;
+  }
+  .section__location {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 auto 160px;
+    font-family: $fontJ;
+    color: $grey;
+    width: 1110px;
+    text-align: center;
+    img {
+      margin: 0 auto 48px;
     }
-    .section__solutions{
-        display: flex;
-        margin: auto;
-        div{
-            height: 480px;
-            background-color: red;
-            color: white;
-            border-top-left-radius: 20px;
-            border-bottom-left-radius: 20px;
-            margin-bottom: 20px;
-            .solutions__img{
-                height: 480px;
-            }
-        }
+    h2 {
+      font-family: $fontJ;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 26px;
+      letter-spacing: 5px;
+      color: $blackL;
+      margin: 0 auto 32px;
+      text-transform: uppercase;
     }
+    a {
+      max-width: 152px;
+      max-height: 56px;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      font-family: $fontJ;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 15px;
+      line-height: 22px;
+      border-radius: 8px;
+      margin-right: 96px;
+      text-decoration: none;
+      color: $white;
+      margin: 0 auto 160px;
+    }
+    a:link,
+    a:visited {
+      padding: 18px 18.5px 16px;
+      background-color: $pink;
+    }
+  }
+  .section__solutions {
+    display: flex;
+    margin: 0 auto 160px;
+    width: 1111px;
+    height: 640px;
+    div {
+      height: 480px;
+      background-color: $pinkBg;
+      color: $grey;
+      border-top-left-radius: 20px;
+      border-bottom-left-radius: 20px;
+      margin-bottom: 20px;
+      align-items: center;
+      h1 {
+        color: $pink;
+        font-family: $fontJ;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 40px;
+        line-height: 48px;
+      }
+      p {
+        font-family: $fontJ;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 26px;
+      }
+      .solutions__img {
+        height: 480px;
+        border-top-right-radius: 15px;
+        border-bottom-right-radius: 15px;
+      }
+    }
+  }
 }
