--- a/src/css/style.css
+++ b/src/css/style.css
@@ -460,7 +460,7 @@ footer .lower__container .inline__lower__container .section__media ul li i {
   width: 350px;
   height: 478px;
   text-align: center;
-  background-color: #FDF3F0;
+  background-color: rgb(253, 243, 240);
   border-radius: 15px;
 }
 .section__tech .tech__div h2 {
